--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,47 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
+﻿<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:fillColor="#F4D35E"
+        android:fillType="evenOdd"
+        android:pathData="M46,34m-24,0a24,24 0,1 1,48 0a24,24 0,1 1,-48 0M58,34m-20,0a20,20 0,1 0,40 0a20,20 0,1 0,-40 0" />
+
+    <path
+        android:fillColor="#FFD166"
+        android:pathData="M78,16L80.9,22.4L88,22.4L82.2,26.6L84.6,33.2L78,29L71.4,33.2L73.8,26.6L68,22.4L75.1,22.4Z" />
+
+    <path
+        android:fillColor="#FFFAEE"
+        android:pathData="M18,82h72v8h-72z" />
+
+    <path
+        android:fillColor="#FFFAEE"
+        android:pathData="M40,82V58h28v24z" />
+
+    <path
+        android:fillColor="#FFFAEE"
+        android:pathData="M54,46c6.6,0 12,5.4 12,12H42c0,-6.6 5.4,-12 12,-12z" />
+
+    <path
+        android:fillColor="#FFFAEE"
+        android:pathData="M24,82V62h10v20z" />
+
+    <path
+        android:fillColor="#FFFAEE"
+        android:pathData="M74,82V62h10v20z" />
+
+    <path
+        android:fillColor="#FFFAEE"
+        android:pathData="M24,62l5,-8l5,8z" />
+
+    <path
+        android:fillColor="#FFFAEE"
+        android:pathData="M74,62l5,-8l5,8z" />
+
+    <path
+        android:fillColor="#FF0A2F4F"
+        android:pathData="M50,82v-11h8v11z" />
 </vector>
